--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@htmlacademy/editorconfig-cli": "^1.0.0",
     "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
+    "gulp-svg-sprite": "^1.5.0",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "^0.1.10"
