--- a/package.json
+++ b/package.json
@@ -2,21 +2,32 @@
   "name": "barbershop-static",
   "description": "Тренировочный проект от HTML Academy",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
+    "build": "gulp build",
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/css/**/*.css\"",
     "test": "npm run stylelint $$ npm run editorconfig",
     "start": "gulp"
   },
   "devDependencies": {
-    "@htmlacademy/editorconfig-cli": "^1.0.0",
-    "browser-sync": "^2.27.5",
-    "gulp": "^4.0.2",
-    "gulp-svg-sprite": "^1.5.0",
-    "prettier": "^2.3.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-htmlacademy": "^0.1.10"
+    "@htmlacademy/editorconfig-cli": "1.0.0",
+    "autoprefixer": "10.4.0",
+    "browser-sync": "2.27.5",
+    "del": "6.0.0",
+    "gulp": "4.0.2",
+    "gulp-clean-css": "4.3.0",
+    "gulp-htmlmin": "5.0.1",
+    "gulp-imagemin": "7.1.0",
+    "gulp-postcss": "9.0.1",
+    "gulp-rename": "2.0.0",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-svg-sprite": "1.5.0",
+    "gulp-webp": "4.0.1",
+    "postcss": "8.4.5",
+    "prettier": "2.3.2",
+    "stylelint": "13.13.1",
+    "stylelint-config-htmlacademy": "0.1.10"
   },
   "dependencies": {},
   "editorconfig-cli": [
